force-app/main/default/objects/Quote_Line_Item__c/Quote_Line_Item__c.object-meta.xml
<CustomObject>
    <label>CB Quote Line Item</label>
    <nameField>
        <label>CB Quote Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>