force-app/main/default/objects/Quote_Line_Item__c/fields/CB_Quote__c.field-meta.xml
<CustomField>
    <fullName>CB_Quote__c</fullName>
    <label>CB Quote</label>
    <referenceTo>CB_Quote__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>