force-app/main/default/objects/Quote_Line_Item__c/fields/Tax_Exempt_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Reason__c</fullName>
    <label>Reason for Tax Exemption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>